# Leo_Sct

Leo_Sct_real/leo_real/: package.xml  setup.cfg
Leo_sct/: .gitignore  LICENSE  api_key.txt  start_robots_tmux.sh
Leo_sct/des/: E.xml  E2.xml  E3.xml  E6.xml  G1.xml  G2.xml  K_reactive_motion_gen1.gen  K_reactive_motion_gen2.gen  K_reactive_motion_gen4.gen  K_reactive_motion_gen6.gen  K_reactive_motion_gen7.gen  README_supervisor_api.md  Sloc_3.xml  Sloc_5.xml  Sup_reactive_motion.gen  Sup_reactive_motion_gen.dot  Sup_reactive_motion_gen1.gen  Sup_reactive_motion_gen2.dot  Sup_reactive_motion_gen2.gen  Sup_reactive_motion_gen3.dot  Sup_reactive_motion_gen3.gen  Sup_reactive_motion_gen4.yaml  Sup_reactive_motion_gen5.dot  Sup_reactive_motion_gen5.yaml  Sup_reactive_motion_gen6.yaml  Sup_reactive_motion_gen7.dot  Sup_reactive_motion_gen7.yaml  comments.txt  gen_to_sct_yaml.py  json_to_nadzoru_xml.py  latest_10_nadzoru.json  latest_1_nadzoru.json  latest_2.json  latest_2_nadzoru.json  latest_3_nadzoru.json  latest_4_nadzoru.json  latest_5_nadzoru.json  latest_6_nadzoru.json  latest_7_nadzoru.json  latest_8_nadzoru.json  (+15 more)
Leo_sct/leo_image/: package.xml
Leo_sct/leo_real/: README.md  setup.py
Leo_sct/llm-part/: README_supervisor_api.md  convert_to_nadzoru_xml.py  json_to_nadzoru_xml.py  request_supervisor_updates_manual.py  robot_navigation.xml  run_pipeline.py  task_profiles.json
Leo_sct/swarm_basics/: package.xml  (+2 more)
leo_image/: CMakeLists.txt
leo_image/src/: image_processor.cpp
log/: latest_build
swarm_aggregation/: package.xml  setup.cfg  setup.py
swarm_basics/: setup.py
swarm_segregation/: package.xml  setup.cfg  setup.py
(+815 files in other folders)
